# baulkandcastle

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  Dockerfile  PREDICTOR_GUIDE.md  README.md  USAGE_GUIDE.md  api_server.py  baulkandcastle_scraper.py  crontab  docker-compose.yml  docker-entrypoint.sh  domain_estimator_helper.py  pyproject.toml  restart.bat  restart.ps1  start.bat  start.ps1  stop.bat  stop.ps1  test_domain_estimator.py
.claude/: settings.json
.claude/commands/: domain-estimator.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  predictions.ts  properties.ts  tools.ts
frontend/src/components/common/: Button.tsx  Card.tsx  FreshnessBadge.tsx  Input.tsx  Loading.tsx  Select.tsx
frontend/src/components/dashboard/: MarketTrends.tsx  PriceChart.tsx  RecentListings.tsx  StatsCards.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/components/predictor/: PredictionResult.tsx  PredictorForm.tsx
frontend/src/components/properties/: PropertyDetailModal.tsx  PropertyTable.tsx
frontend/src/components/tools/: AdminSummaryCards.tsx  ExecutionHistory.tsx  ExecutionModal.tsx  ToolCard.tsx  ToolFlagForm.tsx
frontend/src/hooks/: usePrediction.ts  useProperties.ts  useTools.ts
frontend/src/pages/: DashboardPage.tsx  DatabasePage.tsx  PredictorPage.tsx  PropertiesPage.tsx  SoldPage.tsx  ToolsPage.tsx
frontend/src/types/: prediction.ts  property.ts  tools.ts
frontend/src/utils/: formatters.ts
migrations/: add_sold_date_iso.sql
ml/: __init__.py  estimate_for_sale.py  predict_property_value.py  train_model.py  valuation_predictor.py
src/baulkandcastle/: __init__.py  config.py  exceptions.py  logging_config.py
src/baulkandcastle/api/: __init__.py  routes.py  server.py  tools.py
src/baulkandcastle/cli/: __init__.py  api_server.py  estimate_for_sale.py  predict.py  train_model.py
src/baulkandcastle/core/: __init__.py  constants.py  database.py  models.py
src/baulkandcastle/estimator/: __init__.py
src/baulkandcastle/ml/: __init__.py  feature_engineering.py  valuation_predictor.py
src/baulkandcastle/ml/models/: __init__.py
src/baulkandcastle/scraper/: __init__.py
src/baulkandcastle/utils/: __init__.py  date_parser.py  price_parser.py  property_types.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_database.py  test_date_parser.py  test_price_parser.py  test_property_types.py  test_tools_summary.py
